#83 - ensure tests are working for every ide distribution